implement minor refactorings